--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ static_cell = { version = "2.1.0", features = ["nightly"] }
 esp-println = { version = "0.13.1", features = ["esp32c3"] }
 itoa = "1.0.15"
 httparse = { version = "1.10.1", default-features = false }
+microjson = "0.1.6"
 
 [profile.dev]
 # Rust debug is too slow.
