--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,8 @@ esp-println = { version = "0.13.1", features = ["esp32c3"] }
 itoa = "1.0.15"
 httparse = { version = "1.10.1", default-features = false }
 microjson = "0.1.6"
+embassy-sync = "0.7.0"
+embassy-futures = "0.1.1"
 
 [profile.dev]
 # Rust debug is too slow.
