--- a/lamp-esp32/Cargo.toml
+++ b/lamp-esp32/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 edition = "2021"
-name    = "blinky"
+name    = "lamp-esp32"
 version = "0.1.0"
 
 [[bin]]
-name = "blinky"
+name = "lamp-esp32"
 path = "./src/bin/main.rs"
 
 [dependencies]
@@ -50,6 +50,7 @@ httparse = { version = "1.10.1", default-features = false }
 microjson = "0.1.6"
 embassy-sync = "0.7.0"
 embassy-futures = "0.1.1"
+chrono = { version = "0.4.41", default-features = false }
 
 [profile.dev]
 # Rust debug is too slow.
